fix #about scroll behind header issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,10 @@ header ul,
     margin-left: auto;
 }
 
+#about {
+	scroll-margin-top: 10vh;
+}
+
 .subpage-main,
 .non-title-main {
 	max-width: 960px;
